feat(admin): Implementa gerenciamento de usuários para administradores
Cria os endpoints e a lógica de serviço necessários para que um usuário com a permissão ROLE_ADMIN possa gerenciar outras contas de usuário.

- Adiciona o campo 'role' à entidade `Usuario` e ajusta o método `getAuthorities` para ser dinâmico.
- Refatora o `DataInitializer` para criar o primeiro usuário admin a partir de propriedades de ambiente, removendo credenciais do código-fonte.
- Cria o `UsuarioService` com a lógica para criar, listar, atualizar e deletar usuários, incluindo validação de login duplicado e criptografia de senha.
- Adiciona DTOs (`CriarUsuarioDTO`, `EditarUsuarioDTO`, `UsuarioDTO`) para garantir a comunicação segura e desacoplada com a API.
- Implementa o `AdminController` com os endpoints `GET`, `POST`, `PUT`, `DELETE` para o recurso de usuários.
- Ajusta a `SecurityConfig` para proteger todos os endpoints sob `/api/admin/**`, exigindo a `ROLE_ADMIN`.
- Inclui correção no `DashboardService` para lidar com listas imutáveis retornadas pelo repositório.